<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tracking Run</string>
    <string-array name="filter_options">
        <item>Data</item>
        <item>Tempo Percorrido</item>
        <item>Distância</item>
        <item>Velocidade média</item>
        <item>Calorias Queimadas</item>
    </string-array>
    <string name="your_runs_title">Trajetos</string>
    <string name="statistics_title">Estatísticas</string>
    <string name="settings_title">Configurações</string>
    <string name="welcome_text">Bem vindo! \nPor favor, insira seu nome e seu peso.</string>
    <string name="name_placeholder">Nome</string>
    <string name="weight_placeholder">Peso (Kg)</string>
    <string name="continue_text">Continuar</string>
    <string name="sort_by_text">Ondernar por:</string>
    <string name="new_run_fab_description">Ir para tela de novo trajeto</string>
    <string name="apply_text">Aplicar</string>
    <string name="total_distance_text">Distância Total</string>
    <string name="zero_km_text">0km</string>
    <string name="total_time_text">Tempo Total</string>
    <string name="empty_time">00:00:00</string>
    <string name="total_calories_burned_text">Total de Calorias Queimadas</string>
    <string name="zero_kcal_text">0kcal</string>
    <string name="average_speed_text">Velocidade Média</string>
    <string name="zero_km_h_text">0km/h</string>
    <string name="start_text">Começar</string>
    <string name="finish_run_text">Finalizar Trajeto</string>
    <string name="cancel_run_text">Cancelar Trajeto</string>
    <string name="cancel_run_text_confirm">O trajeto atual será cancelado. Você tem certeza?</string>
    <string name="yes_text">Sim</string>
    <string name="no_text">Não</string>
    <string name="stop_text">Parar</string>
    <string name="run_success_save_text">Trajeto salvo com sucesso.</string>
    <string name="lets_go_text">"Vamos lá, %s!"</string>
    <string name="name_require_text">Informe um nome!</string>
    <string name="weight_require_text">Informe um peso!</string>
    <string name="saved_changes_text">Dados salvos!</string>
    <string name="km_text">km</string>
    <string name="kcal_text">kcal</string>
    <string name="km_h_text">km/h</string>
    <string name="date_text">DATA</string>
    <string name="duration_text">DURAÇÃO</string>
    <string name="avg_speed_uppercase_text">VELOCIDADE MÉDIA</string>
    <string name="distance_uppercase_text">DISTÂNCIA</string>
    <string name="calories_burned_uppercase_text">CALORIAS QUEIMADAS</string>
    <string name="empty_time_milliseconds">00:00:00:00</string>
    <string name="avg_speed_over_time_text">Velocidade média ao longo do tempo.</string>
    <string name="no_chart_data_text">Nenhum dado gráfico disponível.</string>
    <string name="runs_empty_text">Seus trajetos aparecerão aqui!</string>
    <string name="accept_permissions_text">You need to accept location permissions to use this app.</string>
    <string name="map_route_description_text">Mapa da rota realizada.</string>
    <string name="share_button_description">Share button</string>
    <string name="share_text">Compartilhar</string>
    <string name="share_run_text">Compartilhar trajeto!</string>
    <string name="delete_text">Deletar</string>
    <string name="delete_run_success_text">Trajeto deletado com sucesso!</string>
    <string name="delete_run_title">Deletar Trajeto</string>
    <string name="delete_run_text">Realmente deseja excluir o trajeto?</string>
    <string name="ok_text">OK</string>
    <string name="logo_description">Logo Tracking Run</string>
    <string name="delete_all_run_title">Deletar Trajetos</string>
    <string name="delete_all_run_text">Realmente deseja excluir os trajetos selecionados?</string>
    <string name="page_text">Página:</string>
</resources>
