<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration_text"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewAvgSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avg_speed_uppercase_text"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_uppercase_text"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewCaloriesBurned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calories_burned_uppercase_text"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>